# topmodels

./: .env.example  .gitignore  README.md  config.yaml  dashboard.py  pyproject.toml
data/: curated_reports.json  sample_telemetry_export.json
scripts/: install-hooks.sh  post-commit
tests/: test_calibration.py  test_firstparty.py  test_normalize.py  test_reports.py  test_score.py  test_taxonomy.py
topmodels/: __init__.py  calibration.py  cli.py  config.py  enrich.py  http_client.py  models.py  normalize.py  pipeline.py  score.py  taxonomy.py
topmodels/connectors/: __init__.py  base.py  firstparty.py  keywordplanner.py  marketcheck.py  nhtsa.py  reddit.py  reports.py  trends.py
