[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topmodels"
version = "0.1.0"
description = "MotoMetrics 2.x — ranked used-car model pipeline for content backlog and app profiles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "pytrends>=4.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30"]
phase2 = ["praw>=7.7"]
phase3 = []

[project.scripts]
topmodels = "topmodels.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["topmodels*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
